--- a/my/assets/mobirise/css/mbr-additional.css
+++ b/my/assets/mobirise/css/mbr-additional.css
@@ -2256,6 +2256,18 @@ section.lazy-placeholder:after {
     display: block;
   }
 }
+.cid-rJZ7LmjFuj {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #000000;
+}
+.cid-rJZ7LmjFuj P {
+  color: #767676;
+}
+.cid-rJZ7LmjFuj .mbr-text,
+.cid-rJZ7LmjFuj .mbr-section-btn {
+  color: #fcf60a;
+}
 .cid-rIh5xkw7y8 {
   padding-top: 30px;
   padding-bottom: 30px;
@@ -2951,6 +2963,18 @@ section.lazy-placeholder:after {
 }
 .cid-rJLBzGFPvp .card-title {
   text-align: center;
+}
+.cid-rJZ9usdQPQ {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #000000;
+}
+.cid-rJZ9usdQPQ P {
+  color: #767676;
+}
+.cid-rJZ9usdQPQ .mbr-text,
+.cid-rJZ9usdQPQ .mbr-section-btn {
+  color: #fcf60a;
 }
 .cid-rIh5xkw7y8 {
   padding-top: 30px;
