no download on video control

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2853,65 +2853,50 @@ section.lazy-placeholder:after {
 .cid-rIjR5a95ST .mbr-section-subtitle {
   color: #767676;
 }
-.cid-rJYWmfJRT5 {
-  background: #ffffff;
+.cid-rKdqiCSrEJ {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
 }
-.cid-rJYWmfJRT5 .video-block {
-  margin: auto;
-  width: 100% !important;
+.cid-rKdqiCSrEJ .mbr-section {
+  text-align: center;
+  color: #fff;
 }
-@media (max-width: 768px) {
-  .cid-rJYWmfJRT5 .video-block {
-    width: 100% !important;
-  }
+.cid-rKdtNUzfvZ {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
 }
-.cid-rID9XoQ1GZ {
-  background: #ffffff;
+.cid-rKdtNUzfvZ .mbr-section {
+  text-align: center;
+  color: #fff;
 }
-.cid-rID9XoQ1GZ .video-block {
-  margin: auto;
-  width: 100% !important;
+.cid-rKdubjK4X5 {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
 }
-@media (max-width: 768px) {
-  .cid-rID9XoQ1GZ .video-block {
-    width: 100% !important;
-  }
+.cid-rKdubjK4X5 .mbr-section {
+  text-align: center;
+  color: #fff;
 }
-.cid-rID9YhZ4mE {
-  background: #ffffff;
+.cid-rKdv0gPEoF {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
 }
-.cid-rID9YhZ4mE .video-block {
-  margin: auto;
-  width: 100% !important;
+.cid-rKdv0gPEoF .mbr-section {
+  text-align: center;
+  color: #fff;
 }
-@media (max-width: 768px) {
-  .cid-rID9YhZ4mE .video-block {
-    width: 100% !important;
-  }
+.cid-rKdvm1kVQR {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
 }
-.cid-rID9Zqff51 {
-  background: #ffffff;
-}
-.cid-rID9Zqff51 .video-block {
-  margin: auto;
-  width: 100% !important;
-}
-@media (max-width: 768px) {
-  .cid-rID9Zqff51 .video-block {
-    width: 100% !important;
-  }
-}
-.cid-rIDa0bCh3j {
-  background: #ffffff;
-}
-.cid-rIDa0bCh3j .video-block {
-  margin: auto;
-  width: 100% !important;
-}
-@media (max-width: 768px) {
-  .cid-rIDa0bCh3j .video-block {
-    width: 100% !important;
-  }
+.cid-rKdvm1kVQR .mbr-section {
+  text-align: center;
+  color: #fff;
 }
 .cid-rJLzDCDmqN {
   padding-top: 30px;
