--- a/my/assets/mobirise/css/mbr-additional.css
+++ b/my/assets/mobirise/css/mbr-additional.css
@@ -2853,65 +2853,50 @@ section.lazy-placeholder:after {
 .cid-rIjR5a95ST .mbr-section-subtitle {
   color: #767676;
 }
-.cid-rIjRstMJfn {
-  background: #ffffff;
+.cid-rKdxaUHCoY {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
 }
-.cid-rIjRstMJfn .video-block {
-  margin: auto;
-  width: 100% !important;
+.cid-rKdxaUHCoY .mbr-section {
+  text-align: center;
+  color: #fff;
 }
-@media (max-width: 768px) {
-  .cid-rIjRstMJfn .video-block {
-    width: 100% !important;
-  }
+.cid-rKdxVWgrhX {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
 }
-.cid-rID9XoQ1GZ {
-  background: #ffffff;
+.cid-rKdxVWgrhX .mbr-section {
+  text-align: center;
+  color: #fff;
 }
-.cid-rID9XoQ1GZ .video-block {
-  margin: auto;
-  width: 100% !important;
+.cid-rKdycrduOC {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
 }
-@media (max-width: 768px) {
-  .cid-rID9XoQ1GZ .video-block {
-    width: 100% !important;
-  }
+.cid-rKdycrduOC .mbr-section {
+  text-align: center;
+  color: #fff;
 }
-.cid-rID9YhZ4mE {
-  background: #ffffff;
+.cid-rKdyuF2KIy {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
 }
-.cid-rID9YhZ4mE .video-block {
-  margin: auto;
-  width: 100% !important;
+.cid-rKdyuF2KIy .mbr-section {
+  text-align: center;
+  color: #fff;
 }
-@media (max-width: 768px) {
-  .cid-rID9YhZ4mE .video-block {
-    width: 100% !important;
-  }
+.cid-rKdz5qFHeW {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
 }
-.cid-rID9Zqff51 {
-  background: #ffffff;
-}
-.cid-rID9Zqff51 .video-block {
-  margin: auto;
-  width: 100% !important;
-}
-@media (max-width: 768px) {
-  .cid-rID9Zqff51 .video-block {
-    width: 100% !important;
-  }
-}
-.cid-rIDa0bCh3j {
-  background: #ffffff;
-}
-.cid-rIDa0bCh3j .video-block {
-  margin: auto;
-  width: 100% !important;
-}
-@media (max-width: 768px) {
-  .cid-rIDa0bCh3j .video-block {
-    width: 100% !important;
-  }
+.cid-rKdz5qFHeW .mbr-section {
+  text-align: center;
+  color: #fff;
 }
 .cid-rJLzDCDmqN {
   padding-top: 30px;
