update portfolio embed

--- a/my/assets/mobirise/css/mbr-additional.css
+++ b/my/assets/mobirise/css/mbr-additional.css
@@ -2845,6 +2845,23 @@ section.lazy-placeholder:after {
     width: 100% !important;
   }
 }
+.cid-rKX5XNFr3Z {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-rKX5XNFr3Z .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-rKX6C6PKcB {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-rKX6C6PKcB .mbr-section {
+  text-align: center;
+  color: #fff;
+}
 .cid-rIjR5a95ST {
   padding-top: 30px;
   padding-bottom: 30px;
