--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2845,6 +2845,23 @@ section.lazy-placeholder:after {
     width: 100% !important;
   }
 }
+.cid-rKX0ndm1dP {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-rKX0ndm1dP .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-rKX0DQUWOf {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-rKX0DQUWOf .mbr-section {
+  text-align: center;
+  color: #fff;
+}
 .cid-rIjR5a95ST {
   padding-top: 30px;
   padding-bottom: 30px;
